# Qai-AI-AgentOS

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  test_siri_play.py  typescript
.cargo/: config.toml
QData/: dataset_1765319067.csv  dataset_1765319155.csv
agent_backend/: README.md  active_status.txt  echo_bridge.py  pty_echo_bridge.py  pyproject.toml
agent_backend/QData/: dataset_1765226349.csv  dataset_1765226663.csv  dataset_1765227348.csv
agent_backend/agent_kernel_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent_backend/src/: debug_music_ui.py  main.py  test_agent.py  verify.py  verify_itunes.py  verify_music_tool.py
agent_backend/src/agent/: graph.py  state.py
agent_backend/src/tools/: calculator.py  chess_agents.py  chess_battle.py  chess_game.py  data_auditor.py  email_composer.py  fs_tools.py  ml_builder.py  music_player.py  plotter.py  shell.py  web_search.py
agent_backend/src/tools/psych_test/: __init__.py  agents.py  games.py  orchestrator.py
agent_prototype/: README_AGENT.md  ai_shell.py  kernel_bridge.py  requirements.txt
builder/: Cargo.toml
builder/src/: main.rs
docs/: ARCHITECTURE.md  MACOS_INTEGRATION.md  PRD.md  SYSTEM_ARCHITECTURE.md  USER_GUIDE.md  VISION.md
kernel/: Cargo.toml
kernel/src/: agent.rs  allocator.rs  fs.rs  gdt.rs  interrupts.rs  linker.ld  main.rs  memory.rs  screen.rs  serial.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  shell.rs
scripts/: diagnose.sh  run_all.sh  run_bridge.sh  run_qemu.sh
site/: astro.config.mjs  package-lock.json  package.json
site/src/components/: BotLogo.astro  DigitalHorizon.astro  FeatureCard.astro  (+6 more)
(+11 files in other folders)
