[project]
name = "agent-kernel-backend"
version = "0.1.0"
description = "The Agentic Brain for the AgentKernel OS"
authors = [
    { name = "AgentKernel Team", email = "agent@kernel.os" }
]
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "pydantic>=2.0.0",
    "duckduckgo-search>=6.0.0",
    "sympy>=1.12",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]
requires-python = ">=3.9"
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
