[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "=0.11.4"
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.14.10"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
uart_16550 = "0.3.0"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
linked_list_allocator = "0.9.0"
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.4.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }



